--- a/app/src/main/res/layout/list_item_movie_list.xml
+++ b/app/src/main/res/layout/list_item_movie_list.xml
@@ -3,11 +3,12 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:id="@+id/movie_list_item_image_view"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/movie_list_item_movie_title"/>
+        android:id="@+id/movie_list_item_movie_title"
+        android:layout_gravity="center_vertical"/>
 </LinearLayout>
